<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/topPanel_bakcground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_cl_topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="20dp">

        <ImageView
            android:id="@+id/main_iv_drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drawer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            app:layout_constraintLeft_toRightOf="@id/main_iv_drawer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/main_tv_month_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_value_temp"
                android:textSize="24sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/main_tv_month_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_unit"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintLeft_toRightOf="@id/main_tv_month_value"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/main_tv_year_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_value_temp"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toRightOf="@id/main_tv_month_unit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/main_tv_year_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_unit"
                app:layout_constraintLeft_toRightOf="@id/main_tv_year_value"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </LinearLayout>


        <FrameLayout
            android:id="@+id/main_fl_calendarImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/main_iv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_calendar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/day_value_temp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="5dp"/>
        </FrameLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_pencil"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/main_fl_calendarImage"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/main_calendar_background"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/main_cl_topPanel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/week_unit_sun"
                android:textColor="@color/red"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/week_unit_mon"
                android:textColor="@color/black"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/week_unit_tue"
                android:textColor="@color/black"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/week_unit_wed"
                android:textColor="@color/black"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/week_unit_thu"
                android:textColor="@color/black"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/week_unit_fri"
                android:textColor="@color/black"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/week_unit_sat"
                android:textColor="@color/blue"
                android:layout_weight="1"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>